--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ search_engine_parser
 py-tgcalls==0.9.7
 pykeyboard
 pyshorteners
-pyrogram==2.0.106
+git+https://github.com/KurimuzonAkuma/pyrogram.git
 python-dotenv
 pyyaml==6.0.1
 requests
